# dpt

./: .gitignore  CHANGELOG.md  Cargo.toml  FPKGBUILD  LICENSE  Makefile  cliff.toml
.github/workflows/: rust.yml
doc/: spec.md
src/: base.rs  config.rs  dpt_file.rs  env.rs  fpkg_file.rs  gen_pkg.rs  info.rs  main.rs  pkg.rs  pool.rs  repo.rs  run.rs  store.rs  uninstall.rs
tools/: makedpt  makefpkg  pkg_to_fpkg.sh
