[package]
name = "fpkg"
version = "0.1.0"
edition = "2021"

[dependencies]
colog = "1.3.0"
exitcode = "1.1.2"
indicatif = "0.17.11"
kdl = "6.3.3"
log = "0.4.25"
reqwest = { version = "0.12.12", features = [
    "rustls-tls",
    "blocking",
], default-features = false }
tar = "0.4.43"
zstd = "0.13.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
