[package]
name = "fpkg"
version = "0.4.1"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
colog = "1.3.0"
ctrlc = "3.4.5"
exitcode = "1.1.2"
indicatif = "0.17.11"
kdl = "6.3.3"
log = "0.4.25"
nix = { version = "0.29.0", features = ["mount"] }
pathdiff = "0.2.3"
pubgrub = "0.3.0"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = [
    "rustls-tls",
    "blocking",
], default-features = false }
sys-mount = "3.0.1"
tar = "0.4.43"
uzers = "0.12.1"
walkdir = "2.5.0"
zstd = "0.13.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
